force-app/main/default/objects/clofor_com_cfs__GateTraffic__c/clofor_com_cfs__GateTraffic__c.object-meta.xml
<CustomObject>
    <label>Gate Traffic</label>
    <nameField>
        <displayFormat>GTTR-{000000}</displayFormat>
        <label>Gate Traffic ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gate Traffic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>