force-app/main/default/objects/clofor_com_cfs__GateTraffic__c/fields/clofor_com_cfs__ActualDuration__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActualDuration__c</fullName>
    <formula>clofor_com_cfs__ActualExitDateTime__c -  clofor_com_cfs__ActualEntryDateTime__c</formula>
    <label>Actual Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>