force-app/main/default/objects/clofor_com_cfs__GateTraffic__c/fields/clofor_com_cfs__ActualExitDateTime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActualExitDateTime__c</fullName>
    <label>Actual Exit Date/Time</label>
    <type>DateTime</type>
</CustomField>