force-app/main/default/objects/clofor_com_cfs__GateTraffic__c/fields/clofor_com_cfs__CntrInTransport__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CntrInTransport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cntr in Tranport</label>
    <referenceTo>clofor_com_cfs__Container_Info__c</referenceTo>
    <relationshipLabel>GATE TRAFFIC</relationshipLabel>
    <relationshipName>GateTraffic</relationshipName>
    <type>Lookup</type>
</CustomField>