force-app/main/default/objects/clofor_com_cfs__GateTraffic__c/fields/clofor_com_cfs__DriverName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DriverName__c</fullName>
    <label>Driver Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>