force-app/main/default/objects/clofor_com_cfs__GateTraffic__c/fields/clofor_com_cfs__EmptyFullIdentification__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EmptyFullIdentification__c</fullName>
    <formula>text( clofor_com_cfs__CntrInTransport__r.clofor_com_cfs__Empty_Full_Container_Identification__c )</formula>
    <label>Empty/Full Container Identification</label>
    <type>Text</type>
</CustomField>