force-app/main/default/objects/clofor_com_cfs__GateTraffic__c/fields/clofor_com_cfs__EntryPermissionStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EntryPermissionStatus__c</fullName>
    <label>Entry Permission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__APPROVAL_STATUS</valueSetName>
    </valueSet>
</CustomField>