force-app/main/default/objects/clofor_com_cfs__GateTraffic__c/fields/clofor_com_cfs__GateEntryExitChecklist__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GateEntryExitChecklist__c</fullName>
    <label>Gate Entry &amp; Exit Checklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__GateEntryExitChecklist</valueSetName>
    </valueSet>
</CustomField>