force-app/main/default/objects/clofor_com_cfs__GateTraffic__c/fields/clofor_com_cfs__GateEntryExitStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GateEntryExitStatus__c</fullName>
    <label>Gate Entry/Exit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__GateEntryExitStatus</valueSetName>
    </valueSet>
</CustomField>