force-app/main/default/objects/clofor_com_cfs__GateTraffic__c/fields/clofor_com_cfs__Note__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Note__c</fullName>
    <label>Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>