force-app/main/default/objects/clofor_com_cfs__GateTraffic__c/fields/clofor_com_cfs__PlanEntryDateTime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PlanEntryDateTime__c</fullName>
    <label>Plan Entry Date/Time</label>
    <type>DateTime</type>
</CustomField>