force-app/main/default/objects/clofor_com_cfs__GateTraffic__c/fields/clofor_com_cfs__PlateNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PlateNumber__c</fullName>
    <label>Plate Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>