force-app/main/default/objects/clofor_com_cfs__GateTraffic__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Gate__c</columns>
    <columns>clofor_com_cfs__GateEntryExitStatus__c</columns>
    <columns>clofor_com_cfs__EntryPermissionStatus__c</columns>
    <columns>clofor_com_cfs__PlateNumber__c</columns>
    <columns>clofor_com_cfs__CntrInTransport__c</columns>
    <columns>clofor_com_cfs__ContainerNumber__c</columns>
    <columns>clofor_com_cfs__ActualEntryDateTime__c</columns>
    <columns>clofor_com_cfs__ActualExitDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>