force-app/main/default/objects/clofor_com_cfs__GateTraffic__c/listViews/clofor_com_cfs__Gate_in.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__Gate_in</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__CntrInTransport__c</columns>
    <columns>clofor_com_cfs__ContainerNumber__c</columns>
    <columns>clofor_com_cfs__PlateNumber__c</columns>
    <columns>clofor_com_cfs__DriverName__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>clofor_com_cfs__GateEntryExitStatus__c</field>
        <operation>equals</operation>
        <value>Gate Entry</value>
    </filters>
    <label>Gate in</label>
</ListView>