force-app/main/default/objects/clofor_com_cfs__GateTraffic__c/listViews/clofor_com_cfs__GateTrafficToday.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__GateTrafficToday</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__GateEntryExitStatus__c</columns>
    <columns>clofor_com_cfs__EntryPermissionStatus__c</columns>
    <columns>clofor_com_cfs__PlateNumber__c</columns>
    <columns>clofor_com_cfs__CntrInTransport__c</columns>
    <columns>clofor_com_cfs__PlanEntryDateTime__c</columns>
    <columns>clofor_com_cfs__PlanExitDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__PlanEntryDateTime__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Gate Traffic-Today Plan</label>
</ListView>